Add a DirectoryUnArchiver that just copies.
This is because in some situations when building multiple projects there won't be a ZIP artifact inside the maven repository but instead the artifact file will just point to the target folder of the other project in the build.

--- a/pom.xml
+++ b/pom.xml
@@ -1,39 +1,58 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>net.jangaroo</groupId>
-    <artifactId>jangaroo-parent</artifactId>
-    <version>2.0.4-SNAPSHOT</version>
-    <relativePath>../../jangaroo-parent/pom.xml</relativePath>
-  </parent>
-
+  <groupId>net.jangaroo</groupId>
   <artifactId>webjars-maven-plugin</artifactId>
+  <version>2.0.17-SNAPSHOT</version>
   <packaging>maven-plugin</packaging>
+  <name>Jangaroo WebJars Maven Plugin</name>
+  <description>This plugin unpacks Web resources from JARs.</description>
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    <maven.version>2.2.1</maven.version>
+  </properties>
+  <licenses>
+    <license>
+      <name>Apache 2</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+      <distribution>repo</distribution>
+      <comments>A business-friendly OSS license</comments>
+    </license>
+  </licenses>
+  <prerequisites>
+    <maven>${maven.version}</maven>
+  </prerequisites>
   <dependencies>
     <dependency>
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-project</artifactId>
+      <version>${maven.version}</version>
     </dependency>
     <dependency>
       <groupId>org.codehaus.plexus</groupId>
       <artifactId>plexus-archiver</artifactId>
+      <version>1.2</version>
     </dependency>
     <dependency>
       <groupId>org.codehaus.plexus</groupId>
       <artifactId>plexus-io</artifactId>
+      <version>1.0.1</version>
     </dependency>
     <dependency>
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-plugin-api</artifactId>
+      <version>${maven.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-artifact</artifactId>
+      <version>${maven.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.maven.plugins</groupId>
       <artifactId>maven-resources-plugin</artifactId>
+      <version>2.5</version>
       <scope>provided</scope>
       <exclusions>
         <exclusion>
@@ -45,6 +64,7 @@
     <dependency>
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-archiver</artifactId>
+      <version>2.4.1</version>
       <scope>runtime</scope>
     </dependency>
   </dependencies>
@@ -53,10 +73,12 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-invoker-plugin</artifactId>
+        <version>1.5</version>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-plugin-plugin</artifactId>
+        <version>2.9</version>
         <configuration>
           <goalPrefix>webjars</goalPrefix>
         </configuration>
@@ -67,6 +89,17 @@
             </goals>
           </execution>
         </executions>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>2.3.2</version>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+          <encoding>UTF-8</encoding>
+        </configuration>
       </plugin>
     </plugins>
   </build>
@@ -94,7 +127,5 @@
       </plugin>
     </plugins>
   </reporting>
-  <name>Jangaroo WebJars Maven Plugin</name>
-  <description>This plugin unpacks Web resources from JARs.</description>
 </project>
 
