--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>net.jangaroo</groupId>
+  <groupId>org.sakaiproject.maven.plugins</groupId>
   <artifactId>webjars-maven-plugin</artifactId>
-  <version>2.0.17-SNAPSHOT</version>
+  <version>1.0-SNAPSHOT</version>
   <packaging>maven-plugin</packaging>
-  <name>Jangaroo WebJars Maven Plugin</name>
-  <description>This plugin unpacks Web resources from JARs.</description>
+  <name>WebJars Maven Plugin</name>
+  <description>This plugin unpacks Web resources from JARs. It was originally part of the
+  http://github.com/CoreMedia/jangaroo-tools but was forked off to add support for copying
+  in artifacts that aren't in the local repository.</description>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
